--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,38 +1,10 @@
-@import '~@angular/material/theming';
-
-$typography: mat-typography-config(
-    $font-family: 'Roboto, sans-serif',
-    $headline: mat-typography-level(32px, 48px, 400),
-    $body-2: mat-typography-level(16px, 26px, 500),
-    $body-1: mat-typography-level(16px, 22px, 400),
-    $caption: mat-typography-level(14px, 20px, 400),
-    $button: mat-typography-level(16px, 16px, 500)
-);
-
-@include mat-core($typography);
-
-$app-primary: mat-palette($mat-green, 700);
-$app-accent: mat-palette($mat-amber, 300);
-
-$app-theme: mat-light-theme($app-primary, $app-accent);
-
-@include angular-material-theme($app-theme);
-
-* {
-    box-sizing: border-box;
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-}
+@import 'normalize';
+@import 'material-theme';
 
 .text {
 
     &-error {
-        color: mat-color($mat-red, 500);
+        color: $warn;
     }
 
     &-success {
