--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="mat-typography">
+    <app-navigation class="mat-elevation-z6"></app-navigation>
     <router-outlet></router-outlet>
 </div>
