Add GitHub link to navigation

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,4 +5,12 @@
         <span class="nav-hide-small">SE Blueprint Requirements</span>
     </a>
     <div class="flex-spacer"></div>
+    <a mat-button
+       href="https://github.com/MatthiasKunnen/space-engineers-blueprint-requirements"
+       rel="noopener nofollow"
+       aria-label="GitHub repository"
+       title="View on GitHub">
+        <mat-icon class="right-margin-8-720" svgIcon="github"></mat-icon>
+        <span class="nav-hide-small">GitHub</span>
+    </a>
 </nav>
