Make strong tag bold

--- a/src/scss/_normalize.scss
+++ b/src/scss/_normalize.scss
@@ -102,6 +102,10 @@ video {
     vertical-align: baseline;
 }
 
+strong {
+    font-weight: bold;
+}
+
 td, tr, th {
     vertical-align: middle;
 }
